# OptionsPilot

./: .gitignore  CLAUDE.md  README.md  config.yaml  optionspilot_app.py  pyproject.toml  temp_inspect_history.py
data/: backtest_journal.db  journal.db  paper.db
docs/: AI_CONTEXT.md  AI_HANDOFF.md  ARCHITECTURE-AUDIT-V0.4.2.md  ARCHITECTURE-MOBILE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  MODULES.md  NEXT_SESSION.md  PROJECT_STATE.md  PROJECT_STATUS.md  QA_CHECKLIST_RC1.md  QUICK_START.md  RELEASE_CHECKLIST.md  ROADMAP-V0.4-EXPERIENCE.md  ROADMAP-V2.md  ROADMAP-V3-UX.md  ROADMAP.md  TODO.md
optionspilot/: __init__.py  __main__.py  orchestrator.py
scripts/: _common.ps1  browser_check.py  build.ps1  build_exe.ps1  bump_version.py  chart_check.py  chart_history_probe.py  check_docs.py  check_html_ids.py  clean.ps1  dev.ps1  docs.ps1  fetch_symbols.py  make_icon.py  release.ps1  soak.py  test.ps1  verify.ps1
tests/: conftest.py  engine_helpers.py  test_architecture.py  test_backtest.py  test_base.py  test_broker.py  test_cache.py  test_cached.py  test_candlesticks.py  test_coach.py  test_config.py  test_contracts_planner.py  test_engine.py  test_experience.py  test_gate.py  test_human_mode.py  test_indicators.py  test_integrations.py  test_journal.py  test_learning.py  test_models.py  test_notify.py  test_options_metrics.py  test_orchestrator.py  test_orders.py  test_packaging.py  test_registry.py  test_risk.py  test_runtime_settings.py  test_scorer.py  test_sessions.py  test_similarity.py  test_smart_money.py  test_snapshot.py  test_sqlite.py  (+5 more)
(+75 files in other folders)
