[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "optionspilot"
version = "0.1.0"
description = "AI-powered options paper-trading system: analysis, decision engine, risk management, backtesting, learning."
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "yfinance>=0.2.50",
    "pydantic>=2.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "Pillow>=10.0"]
ui = ["fastapi>=0.111", "uvicorn[standard]>=0.30", "pywebview>=5.0"]
notify = ["windows-toasts>=1.1"]
build = ["pyinstaller>=6.0"]
browser = ["playwright>=1.40"]

[tool.setuptools.packages.find]
include = ["optionspilot*"]

[tool.setuptools.package-data]
optionspilot = ["ui/static/*", "data_assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
